--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Noticias</title>
+    <link rel="icon" href="/client/src/assets/images/logo.jpeg" />
+    <title>El Funense</title>
   </head>
   <body>
     <div id="root"></div>
